meja/tests/row-pattern-name-alias.meja
let f = fun (x : [`A], y : [`B], b) => {
  switch (x, y, b) {
    | (x, _, true) | (_, x, false) => x
  };
};
